crates/analyzer/tests/snapshots/errors__emit_bad_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `Foo` expects 4 arguments, but 5 were provided
   ┌─ compile_errors/emit_bad_args.fe:11:14
   │
11 │         emit Foo(ctx, (1, 2), z: 10, y: true, x: 5)
   │              ^^^ ---  ------  -----  -------  ---- supplied 5 arguments
   │              │                                 
   │              expects 4 arguments

error: missing argument label
   ┌─ compile_errors/emit_bad_args.fe:11:23
   │
11 │         emit Foo(ctx, (1, 2), z: 10, y: true, x: 5)
   │                       ^ add `x:` here
   │
   = Note: this label is optional if the argument is a variable named `x`.

error: incorrect type for `Foo` argument `x`
   ┌─ compile_errors/emit_bad_args.fe:11:23
   │
11 │         emit Foo(ctx, (1, 2), z: 10, y: true, x: 5)
   │                       ^^^^^^ this has type `(u256, u256)`; expected type `address`

error: argument label mismatch
   ┌─ compile_errors/emit_bad_args.fe:11:31
   │
11 │         emit Foo(ctx, (1, 2), z: 10, y: true, x: 5)
   │                               ^ expected `y`
   │
   = Note: arguments must be provided in order.

error: argument label mismatch
   ┌─ compile_errors/emit_bad_args.fe:11:38
   │
11 │         emit Foo(ctx, (1, 2), z: 10, y: true, x: 5)
   │                                      ^ expected `z`
   │
   = Note: arguments must be provided in order.


